example/secondfile/objects/DHStatus_Access_Test_Status_Details__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details</description>
    <fields>
        <fullName>ACTL_CLLI_on_ASR__c</fullName>
        <description>This is a technical field to be used for Apex logic. Not to be added to page layout.</description>
        <formula>DHStatus_ASR_Details__r.ACTL_CLLI_Code__c</formula>
        <label>ACTL CLLI on ASR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_ASR_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-</description>
        <label>DHStatus-ASR Details</label>
        <referenceTo>DHStatus_ASR_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Access Test Status Details</relationshipLabel>
        <relationshipName>DHStatus_Access_Test_Status_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_Update_Deal_Hash_Details__c</fullName>
        <formula>CASESAFEID(DHStatus_ASR_Details__r.DHStatus_Update_IDH__r.Id)</formula>
        <label>DHStatus-Update Deal Hash Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-Equipment Type</description>
        <label>Equipment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Partial_ID__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-Facility Partial ID</description>
        <label>Facility Partial ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-Order Number</description>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-</description>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Sent_Date_Time__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-Provider Sent Date Time</description>
        <label>Provider Sent Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-Record Type</description>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Email__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-Technician Email</description>
        <label>Technician Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technician_Name__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-Technician Name</description>
        <label>Technician Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Access Test Status Details-Telephone Number</description>
        <label>Telephone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Access Test Status Details</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>DHStatus-Access Test Status Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Access Test Status Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>